Implement meals sharing

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "better-sqlite3": "^11.0.0",
     "next": "14.0.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^19.0.0-rc-6230622a1a-20240610",
+    "react-dom": "^19.0.0-rc-6230622a1a-20240610",
+    "slugify": "^1.6.6",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "@types/node": "20.12.12",
